; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_fmd_api.c_fmd_serd_reset.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_fmd_api.c_fmd_serd_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"serd engine '%s' does not exist\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"serd_reset %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fmd_serd_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32* %7 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %5, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i8*, i8** %4, align 8
  %12 = call i32* @fmd_serd_eng_lookup(i32* %10, i8* %11)
  store i32* %12, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* @LOG_ERR, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @zed_log_msg(i32 %15, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %16)
  br label %24

18:                                               ; preds = %2
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @fmd_serd_eng_reset(i32* %19)
  %21 = load i32*, i32** %3, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @fmd_hdl_debug(i32* %21, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32* @fmd_serd_eng_lookup(i32*, i8*) #1

declare dso_local i32 @zed_log_msg(i32, i8*, i8*) #1

declare dso_local i32 @fmd_serd_eng_reset(i32*) #1

declare dso_local i32 @fmd_hdl_debug(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
